k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: titanic-challenge
  labels:
    istio-injection: enabled
