k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: titanic-challenge
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    istio-injection: enabled
