k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: titanic-api
  namespace: titanic-challenge
  labels:
    app: titanic-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: titanic-api
  template:
    metadata:
      labels:
        app: titanic-api
    spec:
      containers:
      - name: titanic-api
        image: titanic-api
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
