k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: titanic-api
  namespace: titanic-challenge
spec:
  selector:
    app: titanic-api
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
