k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: titanic-gateway
  namespace: titanic-challenge
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: titanic-api
  namespace: titanic-challenge
spec:
  hosts:
  - "*"
  gateways:
  - titanic-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: titanic-api
        port:
          number: 8000
